# HiGHSpm

./: .gitignore  2d.mps  CMakeLists.txt  CgSolver.cpp  CgSolver.h  CholmodSolver.cpp  CholmodSolver.h  ConjugateGradient.cpp  ConjugateGradient.h  CurtisReidScaling.cpp  CurtisReidScaling.h  Direct.cpp  Direct.h  ExperimentData.cpp  ExperimentData.h  FactorHiGHSSolver.cpp  FactorHiGHSSolver.h  HFactorSolver.cpp  HFactorSolver.h  IPM_aux.cpp  IPM_aux.h  IPM_caller.cpp  IPM_caller.h  IPM_const.h  IPM_model.cpp  IPM_model.h  Ipm.cpp  Ipm.h  IpmIterate.cpp  IpmIterate.h  IpmModel.cpp  IpmModel.h  Ipm_aux.cpp  Ipm_aux.h  Ipm_const.h  JHcompile.sh  Lapack_wrapper.cpp  Lapack_wrapper.h  LibBuild.sh  LibRun.sh  (+46 more)
cmake/: find_stuff.cmake  sources.cmake
netlib_results/: netlib_1.txt  netlib_2.txt  netlib_3.txt  netlib_4.txt  netlib_5.txt  netlib_6.txt  netlib_7.txt  netlib_results_HFactor_AS.txt  netlib_results_HFactor_NE.txt  netlib_results_MA86_AS.txt  netlib_results_MA86_NE.txt  netlib_summary.txt
src/: CMakeLists.txt  main.cpp  mainTest.cpp
src/auxiliary/: Auxiliary.cpp  Auxiliary.h  HpmLog.cpp  HpmLog.h  IntConfig.h  KrylovMethods.cpp  KrylovMethods.h  VectorOperations.cpp  VectorOperations.h
src/factorhighs/: Analyse.cpp  Analyse.h  Auxiliary.cpp  Auxiliary.h  CallAndTimeBlas.cpp  CallAndTimeBlas.h  DataCollector.cpp  DataCollector.h  DenseFact.h  DenseFactFull.cpp  DenseFactHybrid.cpp  DenseFactKernel.cpp  DgemmParallel.cpp  DgemmParallel.h  FactorHiGHS.h  FactorHiGHSSettings.h  Factorise.cpp  Factorise.h  FormatHandler.cpp  FormatHandler.h  FullFormatHandler.cpp  FullFormatHandler.h  FullSolveHandler.cpp  FullSolveHandler.h  HybridHybridFormatHandler.cpp  HybridHybridFormatHandler.h  HybridPackedFormatHandler.cpp  HybridPackedFormatHandler.h  HybridSolveHandler.cpp  HybridSolveHandler.h  KrylovMethods.cpp  KrylovMethods.h  KrylovMethodsIpm.cpp  KrylovMethodsIpm.h  Numeric.cpp  Numeric.h  PackedPackedFormatHandler.cpp  PackedPackedFormatHandler.h  PackedSolveHandler.cpp  PackedSolveHandler.h  (+11 more)
src/highspm/: CurtisReidScaling.cpp  CurtisReidScaling.h  FactorHiGHSSolver.cpp  FactorHiGHSSolver.h  HpmConst.h  HpmControl.cpp  HpmControl.h  HpmInfo.h  HpmIterate.cpp  HpmIterate.h  HpmModel.cpp  HpmModel.h  HpmOption.h  HpmSolver.cpp  HpmSolver.h  HpmStatus.h  Ipm.cpp  Ipm.h  IpmConst.h  IpmInfo.h  IpmIterate.cpp  IpmIterate.h  IpmMatrix.cpp  IpmMatrix.h  IpmModel.cpp  IpmModel.h  IpmOption.h  IpmStatus.h  Ipm_const.h  LinearSolver.h
